apps/workloads/romm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
spec:
  selector:
    app.kubernetes.io/name: romm
  ports:
    - name: http
      port: 80
      targetPort: http
