apps/workloads/romm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm
  namespace: romm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: romm.invalid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romm
                port:
                  name: http
  tls:
    - hosts:
        - romm.invalid
      secretName: romm-tls
